--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 
 ###> symfony/framework-bundle ###
-/.env.local
-/.env.local.php
-/.env.*.local
+.idea/
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
@@ -13,4 +11,4 @@
 .phpunit
 .phpunit.result.cache
 /phpunit.xml
-###< symfony/phpunit-bridge ###
+
